--- a/Bert_qna.ipynb
+++ b/Bert_qna.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOuKRv5usjZ6mZiVod0vyx8",
+      "authorship_tag": "ABX9TyNeVrFnNOxnns/ciV+pr+cp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,9 +116,124 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "res[\"answer\"]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "WYDAXjim3SYu",
+        "outputId": "1738231e-6a8c-4499-bd9e-9f509148bf99"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'to treat acne'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import gradio as gr\n",
+        "\n",
+        "def qna(context,question):\n",
+        "    \n",
+        "  tokenizer = AutoTokenizer.from_pretrained(\"monakth/bert-base-multilingual-uncased-finetuned-squadv2\")\n",
+        "  model = AutoModelForQuestionAnswering.from_pretrained(\"monakth/bert-base-multilingual-uncased-finetuned-squadv2\")\n",
+        "  Que_ans = pipeline(\"question-answering\", model=model,tokenizer = tokenizer )\n",
+        "\n",
+        "\n",
+        "  res = Que_ans(question = question,context=context)\n",
+        "  ans = res[\"answer\"]\n",
+        "  return ans\n",
+        "\n",
+        "demo = gr.Interface(fn=qna, inputs=[\"text\",\"text\"], outputs=\"text\")\n",
+        "demo.launch()"
+      ],
+      "metadata": {
+        "id": "QcUsogwoZee1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 616
+        },
+        "outputId": "e188be9c-8ede-4cd0-fa02-fcf6ae164cfb"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
+            "Note: opening Chrome Inspector may crash demo inside Colab notebooks.\n",
+            "\n",
+            "To create a public link, set `share=True` in `launch()`.\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "(async (port, path, width, height, cache, element) => {\n",
+              "                        if (!google.colab.kernel.accessAllowed && !cache) {\n",
+              "                            return;\n",
+              "                        }\n",
+              "                        element.appendChild(document.createTextNode(''));\n",
+              "                        const url = await google.colab.kernel.proxyPort(port, {cache});\n",
+              "\n",
+              "                        const external_link = document.createElement('div');\n",
+              "                        external_link.innerHTML = `\n",
+              "                            <div style=\"font-family: monospace; margin-bottom: 0.5rem\">\n",
+              "                                Running on <a href=${new URL(path, url).toString()} target=\"_blank\">\n",
+              "                                    https://localhost:${port}${path}\n",
+              "                                </a>\n",
+              "                            </div>\n",
+              "                        `;\n",
+              "                        element.appendChild(external_link);\n",
+              "\n",
+              "                        const iframe = document.createElement('iframe');\n",
+              "                        iframe.src = new URL(path, url).toString();\n",
+              "                        iframe.height = height;\n",
+              "                        iframe.allow = \"autoplay; camera; microphone; clipboard-read; clipboard-write;\"\n",
+              "                        iframe.width = width;\n",
+              "                        iframe.style.border = 0;\n",
+              "                        element.appendChild(iframe);\n",
+              "                    })(7862, \"/\", \"100%\", 500, false, window.element)"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": []
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "QcUsogwoZee1"
+        "id": "FykFNHzP26j2"
       },
       "execution_count": null,
       "outputs": []
